--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         java: [ 17 ]
-        os: [ubuntu, windows]
+        os: [ ubuntu ]
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
